--- a/doc-High_Availability_Guide/cfme/master.adoc
+++ b/doc-High_Availability_Guide/cfme/master.adoc
@@ -17,6 +17,8 @@ include::common/attributes/cfme.adoc[]
 include::topics/Overview.adoc[]
 include::topics/Installation.adoc[]
 include::topics/Database_Failover.adoc[]
+include::topics/HAProxy.adoc[]
+include::topics/HA_Roles.adoc[]
 //Updating_HA is only in CFME as it's concerning subscriptions.
 include::topics/Updating_HA.adoc[]
 
