--- a/doc-High_Availability_Guide/miq/index.adoc
+++ b/doc-High_Availability_Guide/miq/index.adoc
@@ -17,3 +17,6 @@ include::common/attributes/miq.adoc[]
 include::topics/Overview.adoc[]
 include::topics/Installation.adoc[]
 include::topics/Database_Failover.adoc[]
+include::topics/HAProxy.adoc[]
+include::topics/HA_Roles.adoc[]
+//Updating_HA is only in CFME as it's concerning subscriptions.
