--- a/doc-Managing_Infrastructure_and_Inventory/topics/Volumes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Volumes.adoc
@@ -43,6 +43,12 @@ include::Creating_OpenStack_Volume_Backups.adoc[]
 include::Restoring_an_OpenStack_Volume_Backup.adoc[]
 
 :leveloffset: 3
+include::Restoring_Cloud_Volume_Backup.adoc[]
+
+:leveloffset: 3
+include::Deleting_Cloud_Volume_Backup.adoc[]
+
+:leveloffset: 3
 include::Creating_OpenStack_Volume_Snapshot.adoc[]
 
 :leveloffset: 3
