Add  minimum reqs for Google Compute Engine
Add  minimum reqs for Google Compute Engine

--- a/doc-Installing_on_Google_Compute_Engine/topics/installation.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/topics/installation.adoc
@@ -32,7 +32,14 @@ endif::cfme[]
 [[uploading-the-appliance-on-google-compute-engine]]
 === Uploading the Appliance on Google Compute Engine
 
-When the {product-title} Google Compute Engine appliance has finished downloading to your system, upload the appliance with the following steps:
+When the {product-title} Google Compute Engine appliance has finished downloading to your system, upload the appliance to Google Compute Engine.
+
+To upload the {product-title} Google Compute Engine appliance file you will need:
+* 44 GB of storage space.
+* 12 GB RAM.
+* 4 vCPUs.
+
+You can upload the appliance with the following steps:
 
 . Log in to the Google Cloud Platform dashboard.
 . Click on *Home* in the top left of the screen.
