made changes from SME review

--- a/common/provider-ocp-add-container.adoc
+++ b/common/provider-ocp-add-container.adoc
@@ -3,7 +3,7 @@
 . Enter a *Name* for the provider.
 . From the *Type* list, select *OpenShift Container Platform*.
 . Enter the appropriate *Zone* for the provider. If you do not specify a zone, it is set to `default`.
-. From the *Alerts* list, select *Prometheus* to enable alerts, or leave as *Disabled*. Selecting *Prometheus* adds a *Alerts* tab to the lower pane to configure the Prometheus service. Alerts are disabled by default.
+. From the *Alerts* list, select *Prometheus* to enable external alerts, or leave as *Disabled*. Selecting *Prometheus* adds an *Alerts* tab to the lower pane to configure the Prometheus service. Alerts are disabled by default.
 . From the *Metrics* list, select *Hawkular* or *Prometheus* to collect capacity and utilization data, or leave as *Disabled*. Selecting *Prometheus* or *Hawkular* adds a *Metrics* tab to the lower pane for further configuration. Metrics are disabled by default.
 . In the *Default* tab, configure the following for the OpenShift provider: 
 .. Select a *Security Protocol* method to specify how to authenticate the provider:
@@ -47,7 +47,7 @@ In OpenShift, the default deployment of the router generates certificates during
 ====
 +
 * *SSL without validation*: Authenticate the provider insecurely using SSL. (Not recommended)
-.. Enter the *Hostname* or IPv4 or IPv6 address of the provider. If using Hawkular metrics, you can use the *Detect* button to find the hostname.
+.. Enter the *Hostname* or IPv4 or IPv6 address of the provider, or use the *Detect* button to find the hostname.
 .. Enter the *API Port* if your Hawkular provider uses a non-standard port for access. The default port is `443`.
 .. Click *Validate* to confirm that {product-title} can connect to the metrics endpoint.
 . If you selected the *Prometheus* alerts service, configure the service's details in the *Alerts* tab:
