update Instances file

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Instances.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Instances.adoc
@@ -292,7 +292,9 @@ include::Reviewing_an_Instance_or_Image.adoc[]
 
 :leveloffset: 2
 include::Viewing_Running_Processes_after_Collection.adoc[]
-
+ 
+:leveloffset: 2
+include::Managing_Security_Groups.adoc[]
 
 :leveloffset: 2
 include::Editing_Instance_or_Image_Properties.adoc[]
