--- a/doc-Managing_Infrastructure_and_Inventory/topics/Managing_Security_Groups.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Managing_Security_Groups.adoc
@@ -1,7 +1,7 @@
-[[maanging_security_groups]]
+[[manging_security_groups]]
 = Managing Security Groups for Cloud Instances
 
-Manage security groups associated with cloud provider instances using {product-title_short}. 
+Manage security groups associated with cloud provider instances using {product-title}. 
 
 To add a security group to an instance: 
 
