add cloud-security image

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Managing_Security_Groups.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Managing_Security_Groups.adoc
@@ -7,7 +7,7 @@ To add a security group to an instance:
 
 . Navigate to menu:Compute[Clouds > Instances].
 . Click on *Instances by Provider*, and select an instance.  
-. Click image:1847.png[Configuration] (*Configuration*), then click image:1851.png[Add a Security Group] (*Add a Security Group*).
+. Click image:1847.png[Configuration] (*Configuration*), then click image:cloud-security.png[Add a Security Group] (*Add a Security Group*).
 . Select a *Security Group* from the drop-down menu to add to the instance. 
 . Click *Save*. 
 
@@ -15,6 +15,6 @@ To remove a security group from an instance:
 
 . Navigate to menu:Compute[Clouds > Instances].
 . Click on *Instances by Provider*, and select an instance.  
-. Click image:1847.png[Configuration] (*Configuration*), then click image:1851.png[Remove a Security Group] (*Remove a Security Group*).
+. Click image:1847.png[Configuration] (*Configuration*), then click image:cloud-security.png[Remove a Security Group] (*Remove a Security Group*).
 . Select a *Security Group* from the drop-down menu to remove from the instance. 
 . Click *Save*. 
