Updated the markup around the procedure to upload the appliance on RHV.

--- a/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
@@ -12,6 +12,8 @@ ifdef::miq[]
 [[obtaining-the-appliance]]
 === Obtaining the appliance
 
+The following procedure outlines how to obtain a copy of the appliance from the ManageIQ homepage.
+
 . In a browser, navigate to link:manageiq.org/download[].
 . Select *Red Hat Virtualization* from the *--Choose your platform--* list.
 . Select *Stable (fine-2)* from the *--Choose a release--* list.
@@ -22,6 +24,8 @@ ifdef::cfme[]
 [[obtaining-the-appliance]]
 === Obtaining the Appliance
 
+The following procedure outlines how to obtain a copy of the appliance from the Customer Portal.
+
 . Go to link:https://access.redhat.com[access.redhat.com] and log in to the Red Hat Customer Portal using your customer account details.
 . Click *Downloads* in the menu bar.
 . Click *A-Z* to sort the product downloads alphabetically.
@@ -29,8 +33,8 @@ ifdef::cfme[]
 . From the list of installers and images, select the *CFME Red Hat Virtual Appliance* download link.
 endif::cfme[]
 
-[[uploading-the-appliance-on-red-hat-virtualization-manager]]
-=== Uploading the Appliance on Red Hat Virtualization Manager
+[[uploading-the-appliance-on-red-hat-virtualization]]
+=== Uploading the Appliance on Red Hat Virtualization
 
 The method for uploading the {product-title_short} appliance differs depending on the Red Hat Virtualization version you are using.
 
@@ -62,17 +66,17 @@ After uploading the image, create a disk and attach it to a virtual machine.
 To import the certificate authority, browse to `https://<engine_address>/ovirt-engine/services/pki-resource?resource=ca-certificate&format=X509-PEM-CA` and select all the trust settings. Refer to the instructions to install the certificate authority in https://access.redhat.com/solutions/95103[Firefox], https://access.redhat.com/solutions/17864[Internet Explorer], or https://access.redhat.com/solutions/1168383[Google Chrome].
 ====
 
-To upload the appliance:
+To upload the appliance::
 
 . Open the *Upload Image* screen in the Administration Portal:
-* From the *Disks* tab, select *Start* from the *Upload* drop-down.
-* Alternatively, from the *Storage* tab select the storage domain, then select the *Disks* sub-tab, and select *Start* from the *Upload* drop-down.
+* From the *Disks* tab, select *Start* from the *Upload* menu.
+* Alternatively, from the *Storage* tab select the storage domain, then select the *Disks* sub-tab, and select *Start* from the *Upload* menu.
 . In the *Upload Image* screen, click *Browse* and select the image on the local disk.
 . Set *Image Type* to *QCOW2*.
 . Fill in the *Disk Option* fields. See https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.1-beta/html-single/administration_guide/#Add_Virtual_Disk_dialogue_entries[Explanation of Settings in the New Virtual Disk Window] in the _Red Hat Virtualization Administration Guide_ for a description of the relevant fields.
 . Click *OK*.
 
-A progress bar will indicate the status of the upload. You can also pause, cancel, or resume uploads from the *Upload* drop-down.
+A progress bar will indicate the status of the upload. You can also pause, cancel, or resume uploads from the *Upload* menu.
 
 See the https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.1-beta/html-single/administration_guide/#Uploading_a_Disk_Image_to_a_Storage_Domain[Uploading a Disk Image to a Storage Domain] in the _Red Hat Virtualization Administration Guide_ for more information.
 
@@ -128,7 +132,7 @@ It takes approximately 90 minutes to upload the {product-title} appliance file t
 
 The following procedure provides manual upload instructions if the image uploader tool is not available or fails to upload.
 
-. Log into a host in your Red Hat Virtualization system with a mount to the export storage domain.
+. Log in to a host in your Red Hat Virtualization system with a mount to the export storage domain.
 . Change to the export storage domain's directory.
 . Copy the {product-title} appliance `OVF` archive to this directory.
 . Run the `ls` command to locate the directory named after a GUID, and change to that directory.
