Changed the CFME version numbers to 4.6-Beta.

--- a/doc-Integration_with_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Integration_with_OpenShift_Container_Platform/cfme/master.adoc
@@ -1,5 +1,5 @@
 = Integration with OpenShift Container Platform
-:vernum: 4.6
+:vernum: 4.6-Beta
 :doctype: article
 :imagesdir: images
 :toc: left
@@ -55,4 +55,6 @@ include::topics/provider-ose-add-container.adoc[]
 = Container Image Scanning
 
 include::topics/image-scanning.adoc[]
+
+
 
