--- a/doc-General_Configuration/cfme/master.adoc
+++ b/doc-General_Configuration/cfme/master.adoc
@@ -1,6 +1,6 @@
 = General Configuration
 :imagesdir: images
-:vernum: 4.6
+:vernum: 4.6-Beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -26,6 +26,8 @@ include::topics/Smart_Proxies.adoc[]
 include::topics/About.adoc[]
 
 include::topics/RH_Insights.adoc[]
+
+
 
 
 
