--- a/doc-High_Availability_Guide/cfme/master.adoc
+++ b/doc-High_Availability_Guide/cfme/master.adoc
@@ -1,6 +1,6 @@
 = High Availability Guide
 :imagesdir: images
-:vernum: 4.6
+:vernum: 4.6-Beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -21,6 +21,8 @@ include::topics/HAProxy.adoc[]
 include::topics/HA_Roles.adoc[]
 //Updating_HA is only in CFME as it's concerning subscriptions.
 include::topics/Updating_HA.adoc[]
+
+
 
 
 
