--- a/doc-Installing_on_Google_Compute_Engine/cfme/master.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on Google Compute Engine
 :imagesdir: images
-:vernum: 4.6
+:vernum: 4.6-Beta
 :toc: left
 :toclevels: 3
 :experimental:
@@ -38,6 +38,8 @@ include::common/initial-login-changepw.adoc[]
 [[appliance-console-cli]]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
+
+
 
 
 
