--- a/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on OpenShift Container Platform
 :imagesdir: images
-:vernum: 4.6
+:vernum: 4.6-Beta
 :toc: left
 :toclevels: 3
 :experimental:
@@ -36,6 +36,8 @@ include::topics/troubleshooting.adoc[]
 [[appliance-console-cli]]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
+
+
 
 
 
