--- a/doc-Introduction_to_Self_Service_Portal/cfme/master.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Introduction to the Self Service User Interface
 :imagesdir: images
-:vernum: 4.6
+:vernum: 4.6-Beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -20,6 +20,8 @@ include::topics/Dashboard_Tab.adoc[]
 include::topics/My_Services_Tab.adoc[]
 include::topics/Orders_Tab.adoc[]
 include::topics/Service_Catalog_Tab.adoc[]
+
+
 
 
 
