--- a/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Managing Infrastructure and Inventory
 :imagesdir: images
-:vernum: 4.6
+:vernum: 4.6-Beta
 :doctype: book
 :toc: left
 :toclevels: 3
@@ -83,6 +83,8 @@ include::topics/VDS_Switches.adoc[]
 
 :leveloffset: 1
 include::topics/Container_Entities.adoc[]
+
+
 
 
 
