added revisions and corrections

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -46,6 +46,17 @@ View a list of generic objects and click through to see detailed summary informa
 . Navigate to menu:Automate[Generic Objects].
 . Click on an item in the table to view its summary information.
 
+[[create-generic-objects]]
+===== Create Generic Objects
+include::common/create-generic-object.adoc[]
+
+[[edit-generic-objects]]
+===== Edit Generic Objects
+include::common/edit-generic-object.adoc[]
+
+[[remove-generic-objects]]
+===== Remove Generic Objects
+include::common/remove-generic-object.adoc[]
 
 [[service-dialogs]]
 ==== Service Dialogs
