update doc with note

--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -49,6 +49,12 @@ A table of all workers and current status will appear from which you can confirm
 === Adding a Playbook Repository
 Add a repository so that {product-title} can discover and make available your playbooks.
  
+[NOTE]
+
+====
+Configure your {product-title_short] appliance network identity (hostname/IP address) before adding Ansible playbook repositories. Restart the `evmserverd` service after changing the hostname or IP address to ensure repositories add properly.
+====
+ 
 . Navigate to menu:Automation[Ansible > Repositories].
 . Click *Add*.
 . Provide a Repository Name in the *Name* field. 
