update with reviewer comments

--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -27,15 +27,15 @@ Ranging from simple to complex tasks, Ansible playbooks can support cloud manage
 
 Ansible is built into {product-title_short} so there is nothing to install. The basic workflow when using Ansible in {product-title} is as follows:
 
-* Enable the *Embedded Ansible* server role.
-* Add a source control repository that contains your playbooks.
-* Establish credentials with your inventory. 
-* Back your services, alerts and policies using available playbooks. 
+. Enable the *Embedded Ansible* server role.
+. Add a source control repository that contains your playbooks.
+. Establish credentials with your inventory. 
+. Back your services, alerts and policies using available playbooks. 
 
 
 [[enabling-embedded-ansible-server-role]]
 === Enabling the Embedded Ansible Server Role
-In {product-title}, the Ansible role is disabled by default. Enable the server role to utilize Ansible Automation Inside. 
+In {product-title}, the *Embedded Ansible* role is disabled by default. Enable this server role to utilize Ansible Automation Inside. 
 
 [NOTE]
 ====
