update with reviewer comments

--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -39,7 +39,7 @@ In {product-title}, the *Embedded Ansible* role is disabled by default. Enable t
 
 [NOTE]
 ====
-Configure your {product-title_short} appliance network identity (hostname/IP address) before enabling the Ansible server role. Restart the `evmserverd` service on the appliance with the enabled Ansible role after making any changes to the hostname or IP address.
+Configure your {product-title_short} appliance network identity (hostname/IP address) before enabling the Embedded Ansible server role. Restart the `evmserverd` service on the appliance with the enabled Embedded Ansible server role after making any changes to the hostname or IP address.
 ====
 
 . Navigate to the settings menu, then *Configuration* &#8594; *Settings*.
