--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -48,7 +48,7 @@ Configure your {product-title_short} appliance network identity (hostname/IP add
 
 [[verifying-embedded-ansible-worker-state]]
 === Verifying the Embedded Ansible Worker State
-Verify that the embedded Ansible worker has started to utilize its features. 
+Verify that the Embedded Ansible worker has started to utilize its features. 
 
 . Navigate to the settings menu, then *Configuration* &#8594; *Diagnostics* and click on the desired server.
 . Click on the *Workers* tab. 
