--- a/doc-QuickStart_OpenStack_Provider_Guide/cfme/master.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/cfme/master.adoc
@@ -154,12 +154,16 @@ include::topics/reports.adoc[]
 
 include::topics/chargeback.adoc[]
 
-/// [appendix]
+[appendix]
+include::common/app-self_signed_CA.adoc[]
+
+[appendix]
 [[provisioning-dialogs-customizing]]
 == Customizing Provisioning Dialogs
 
 include::common/provisioning-dialogs-customization.adoc[]
 
+[appendix]
 [[custom-button-tenants]]
 == Creating Custom Buttons for Cloud Tenants
 
@@ -221,6 +225,4 @@ You can manage tenants through two different sections of the {product-title_shor
 * To view the {product-title_short} tenants, navigate to menu:Compute[Administrator | EVM > Configuration]. Under the *Access Control* accordion, click *Tenants*. 
 
 The {product-title_short} view provides a heirarchy, with the top _root_ level being the base {product-title_short} tenant. Every cloud provider is a child tenant of the base {product-title_short} tenant. Each OpenStack tenant is nested under its corresponding cloud provider. 
-
-
 
